--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
+    "@turf/turf": "^7.1.0",
+    "mapbox-gl": "^3.5.2",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-map-gl": "^7.1.7",
+    "react-toastify": "^10.0.5",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
+    "@types/node": "22.2.0",
+    "@types/react": "18.3.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.4"
   }
 }
